# interview_ct

./: .env  .flake8  .flaskenv  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.toml
contrib/: .env-sample
genius_list/: app.py
genius_list/blueprints/restapi/: __init__.py  resource.py  services.py
genius_list/ext/: cache.py  configuration.py
