[tool.poetry]
name = "interview_ct"
version = "0.1.0"
description = ""
authors = ["Weslly Oliveira <weslly99@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
dynaconf = "^3.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
